--- a/css/brodie.css
+++ b/css/brodie.css
@@ -1,7 +1,7 @@
 .version.brodie /* version checker */
 {
-	color: #0000E4;
-	background-color: #40D828;
+	color: #000007;
+	background-color: #778CB8;
 }
 
 .html
@@ -294,9 +294,9 @@
 	z-index: 29;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 58px;
 	font-size: 48px;
 	text-align: center;
+	line-height: 58px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -319,9 +319,9 @@
 	z-index: 37;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
+	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -338,9 +338,9 @@
 	z-index: 33;
 	min-height: 27px;
 	background-color: transparent;
-	line-height: 26px;
 	font-size: 22px;
 	text-align: center;
+	line-height: 26px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -358,9 +358,9 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
-	line-height: 24px;
 	font-size: 20px;
 	text-align: left;
+	line-height: 24px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
@@ -373,9 +373,9 @@
 	z-index: 45;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
+	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -393,8 +393,8 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
-	line-height: 24px;
 	font-size: 20px;
+	line-height: 24px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
@@ -435,9 +435,9 @@
 	width: 460px;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
+	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -450,9 +450,9 @@
 	width: 460px;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
+	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -728,9 +728,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	line-height: 20px;
 	color: #FFFFFF;
 	text-align: center;
+	line-height: 20px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	top: 561px;
@@ -748,9 +748,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	line-height: 20px;
 	color: #FFFFFF;
 	text-align: center;
+	line-height: 20px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	top: 560px;
