--- a/css/14-15-marching.css
+++ b/css/14-15-marching.css
@@ -1,7 +1,7 @@
 .version._14_15_marching /* version checker */
 {
-	color: #000006;
-	background-color: #F81399;
+	color: #0000F0;
+	background-color: #9093C2;
 }
 
 .html
@@ -294,9 +294,9 @@
 	z-index: 29;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 58px;
 	font-size: 48px;
 	text-align: center;
+	line-height: 58px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -319,9 +319,9 @@
 	z-index: 34;
 	min-height: 45px;
 	background-color: transparent;
-	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
+	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -339,9 +339,9 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
-	line-height: 24px;
 	font-size: 20px;
 	text-align: left;
+	line-height: 24px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
@@ -368,8 +368,8 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
-	line-height: 24px;
 	font-size: 20px;
+	line-height: 24px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
