--- a/css/15-16-marching.css
+++ b/css/15-16-marching.css
@@ -1,7 +1,7 @@
 .version._15_16_marching /* version checker */
 {
-	color: #000016;
-	background-color: #1F32B6;
+	color: #000019;
+	background-color: #815BCD;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 499.99999999999994px;
+	min-height: 499.7750000000001px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -26,7 +26,6 @@
 #page_position_content
 {
 	margin-top: -36px;
-	padding-bottom: 438px;
 	width: 0.01px;
 }
 
@@ -287,6 +286,104 @@
 {
 	z-index: 2;
 	min-height: 56px;
+}
+
+#u3765-4
+{
+	z-index: 29;
+	min-height: 45px;
+	background-color: transparent;
+	line-height: 58px;
+	font-size: 48px;
+	text-align: center;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+}
+
+#u3765
+{
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+}
+
+#u3765-4-bw
+{
+	z-index: 29;
+	min-height: 45px;
+	margin-top: 29px;
+}
+
+#u3768-4
+{
+	z-index: 34;
+	min-height: 45px;
+	background-color: transparent;
+	line-height: 44px;
+	font-size: 37px;
+	text-align: center;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+}
+
+#u3768-4-bw
+{
+	z-index: 34;
+	min-height: 45px;
+	margin-top: 10px;
+}
+
+#u3769-4
+{
+	z-index: 38;
+	width: 920px;
+	min-height: 73px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	text-align: left;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 25px;
+	position: relative;
+}
+
+#u3766
+{
+	z-index: 33;
+	width: 920px;
+	min-height: 518px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-left: 20px;
+	margin-top: 16px;
+	position: relative;
+}
+
+#u3770-21
+{
+	z-index: 42;
+	width: 920px;
+	min-height: 73px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
+}
+
+#u3770-2,#u3770-3
+{
+	text-align: left;
+}
+
+#u3770-5,#u3770-7,#u3770-9,#u3770-11,#u3770-13,#u3770-14,#u3770-18,#u3770-19
+{
+	text-align: center;
 }
 
 body
