--- a/css/brodie.css
+++ b/css/brodie.css
@@ -1,7 +1,7 @@
 .version.brodie /* version checker */
 {
-	color: #000007;
-	background-color: #778CB8;
+	color: #000000;
+	background-color: #A1E821;
 }
 
 .html
@@ -13,12 +13,11 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 1268.5500000000002px;
+	min-height: 1269px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -26,7 +25,7 @@
 #page_position_content
 {
 	margin-top: -36px;
-	padding-bottom: 41px;
+	padding-bottom: 141px;
 	width: 0.01px;
 }
 
@@ -294,9 +293,9 @@
 	z-index: 29;
 	min-height: 45px;
 	background-color: transparent;
+	line-height: 58px;
 	font-size: 48px;
 	text-align: center;
-	line-height: 58px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -319,9 +318,9 @@
 	z-index: 37;
 	min-height: 45px;
 	background-color: transparent;
+	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
-	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -338,9 +337,9 @@
 	z-index: 33;
 	min-height: 27px;
 	background-color: transparent;
+	line-height: 26px;
 	font-size: 22px;
 	text-align: center;
-	line-height: 26px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -358,9 +357,9 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
+	line-height: 24px;
 	font-size: 20px;
 	text-align: left;
-	line-height: 24px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
@@ -373,9 +372,9 @@
 	z-index: 45;
 	min-height: 45px;
 	background-color: transparent;
+	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
-	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 }
@@ -393,8 +392,8 @@
 	width: 920px;
 	min-height: 73px;
 	background-color: transparent;
-	font-size: 20px;
 	line-height: 24px;
+	font-size: 20px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	margin-left: 20px;
@@ -435,9 +434,9 @@
 	width: 460px;
 	min-height: 45px;
 	background-color: transparent;
+	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
-	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -450,9 +449,9 @@
 	width: 460px;
 	min-height: 45px;
 	background-color: transparent;
+	line-height: 44px;
 	font-size: 37px;
 	text-align: center;
-	line-height: 44px;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -528,9 +527,10 @@
 	z-index: 82;
 	width: 0.01px;
 	height: 83px;
-	margin-left: 19px;
-	margin-top: 17px;
-	position: relative;
+	position: fixed;
+	bottom: 41px;
+	left: 50%;
+	margin-left: -461px;
 }
 
 #u2832
