--- a/css/junior.css
+++ b/css/junior.css
@@ -1,7 +1,7 @@
 .version.junior /* version checker */
 {
-	color: #0000E7;
-	background-color: #3979E7;
+	color: #000017;
+	background-color: #88160B;
 }
 
 .html
@@ -585,7 +585,7 @@
 	margin-right: -10000px;
 	margin-top: 1px;
 	left: 222px;
-	background: transparent url("../images/10407893_10200387133157793_1545247293051927714_n-u1979-fr.jpg") no-repeat center center;
+	background: transparent url("../images/karla%20edge%201564.jpg") no-repeat center center;
 	background-size: cover;
 }
 
