--- a/css/performance.css
+++ b/css/performance.css
@@ -1,7 +1,7 @@
 .version.performance /* version checker */
 {
-	color: #000001;
-	background-color: #6ADEB8;
+	color: #0000E0;
+	background-color: #13DDEC;
 }
 
 .html
@@ -13,11 +13,12 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 500px;
+	min-height: 499.2642857142856px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 1px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -25,7 +26,7 @@
 #page_position_content
 {
 	margin-top: -36px;
-	padding-bottom: 157px;
+	padding-bottom: 162px;
 	width: 0.01px;
 }
 
@@ -296,48 +297,13 @@
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 148px;
-	margin-top: 59px;
+	margin-top: 54px;
 	position: relative;
-}
-
-#u3555
-{
-	z-index: 30;
-	width: 220px;
-	height: 221px;
-	position: relative;
-	margin-right: -10000px;
-	background: transparent url("../images/vlcsnap-2016-05-19-09h10m41s142.jpg") no-repeat center center;
-	background-size: cover;
-}
-
-#u3557
-{
-	z-index: 31;
-	width: 220px;
-	height: 221px;
-	position: relative;
-	margin-right: -10000px;
-	left: 444px;
-	background: transparent url("../images/vlcsnap-2016-05-19-08h52m59s251.jpg") no-repeat center center;
-	background-size: cover;
-}
-
-#u3556
-{
-	z-index: 32;
-	width: 220px;
-	height: 221px;
-	position: relative;
-	margin-right: -10000px;
-	left: 222px;
-	background: transparent url("../images/cover.jpg") no-repeat center center;
-	background-size: cover;
 }
 
 #menuu3533
 {
-	z-index: 33;
+	z-index: 30;
 	width: 664px;
 	border-style: none;
 	border-color: transparent;
